[package]
name = "tors_placefile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.5"
tiny_http = "0.11.0"
hyper = { version = "0.14.19", features = ["client", "http1", "tcp"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "rt"] }
hyper-tls = "0.5.0"
